kanc/src/tests/sample_code/should_fail/multi_file/bind/leaky_type/src/mod.k
type Private {
    c: Private,
}

pub type Foo {
    c(_: Private): Foo,
}
